app/assets/stylesheets/dul-arclight/dul_styles.scss
/* ... */
.card-text,
.al-grouped-title-bar {
  .responsiveTruncatorToggle {
    &::before {
      background: linear-gradient(
        to left,
        $facet-grey, rgba(255,255,255,.1)
      );
    }
  }
}

@include media-breakpoint-up(lg) {
  
  .card-horizontal {
    flex-direction: row;
    max-height: 14rem;

    .card-img {
      display: none;
    }

    .card-body {
      flex: 2;

      .card-text.expanded {
        overflow-y: scroll;
        max-height: 70%;
        padding-right: .5rem;
      }

    }

    .card-footer {
      padding: 1.25rem;
      background-color: rgba(0, 0, 0, 0.03);
      border-left: 1px solid rgba(0, 0, 0, 0.125);
      border-top: unset;
    }

  }

}

@include media-breakpoint-up(xl) {

  .card-horizontal {

    .card-img {
      display: flex;
      overflow: hidden;
      flex: 1;
      align-self: center;
      border-bottom-right-radius: 0;
      border-top-right-radius: 0;

      .img-wrapper {
        height: 14rem;
        align-self: center;
        display: flex;
        background-color: $gray-light;
        width: 100%;
      }

    }
  
  }

}


.page-link {
  color: $primary-link-color;
}

.page-item.active .page-link {
  background-color: $primary-link-color;
  border-color: $primary-link-color;
}


/* repository index */

body.blacklight-repositories-index {
  
  .card-img-top {
    max-height: 10rem;
    overflow: hidden;
  }

  @include media-breakpoint-up(sm) {
    .card-deck .card {
      flex: unset;
      margin-right: 15px;
      margin-left: 15px;
      margin-bottom: 15px
    }
  }

  @include media-breakpoint-up(lg) {
    .card-img-top {
      max-height: 14rem;
      overflow: hidden;
    }

    .card-deck .card {
      flex: 1 0 0%;
      margin-right: 15px;
      margin-bottom: 0;
      margin-left: 15px;
    }
  }
}

/* modals */

h1.modal-title {
  font-size: 2rem;
}

